# Simple-NFT-Bridge

./: README.md
contracts/: .gitignore  Cargo.toml  build.sh  codegen.sh  commands.txt
contracts/artifacts/: checksums.txt  checksums_intermediate.txt  nft_minter.wasm  transceiver.wasm
contracts/contracts/nft-minter/: Cargo.toml  build.sh
contracts/contracts/nft-minter/examples/: schema.rs
contracts/contracts/nft-minter/schema/: nft-minter.json
contracts/contracts/nft-minter/src/: contract.rs
contracts/contracts/nft-minter/src/actions/: execute.rs  instantiate.rs  migrate.rs  query.rs
contracts/contracts/transceiver/: Cargo.toml
contracts/contracts/transceiver/examples/: schema.rs
contracts/contracts/transceiver/schema/: minter.json  transceiver.json
contracts/contracts/transceiver/src/: contract.rs  helpers.rs  lib.rs
contracts/contracts/transceiver/src/actions/: execute.rs  instantiate.rs  migrate.rs  query.rs
contracts/contracts/wrapper/: Cargo.toml
contracts/contracts/wrapper/examples/: schema.rs
contracts/contracts/wrapper/schema/: wrapper.json
contracts/contracts/wrapper/src/: contract.rs  lib.rs
contracts/contracts/wrapper/src/actions/: execute.rs  instantiate.rs  migrate.rs  query.rs
contracts/scripts/: package.json
contracts/scripts/src/backend/services/: call-contract.ts  constants.ts  get-targets.ts  import-logs.ts  instantiate-contract.ts  math.ts  (+11 more)
contracts/tests/: Cargo.toml
contracts/tests/src/: lib.rs  nft_minter.rs  transceiver.rs  wrapper.rs
contracts/tests/src/helpers/: nft_minter.rs  transceiver.rs  wrapper.rs
(+43 files in other folders)
